--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-      <!-- ⬇⬇⬇⬇⬇⬇ Soy una referenecia ⬇⬇⬇⬇⬇⬇ -->
-        <div class="container">
+    <h1 class="titulo">Titulo</h1>
+    <p class="descrp">Descripcion</p>
+    <img  class="img" alt="">
 
-        </div>
 
+    <div class="contenedor">
+        <button class="button btn-izquierda">izquierda</button>
+        <button class="button btn-derecha">Derecha</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
